@@ -51,7 +51,6 @@ public class WebReportController extends Controller {
 		WebReport model = new WebReport();
 		model.load();
 		model.setLink_add_source("igrp_studio","WebReport","index");
-		 //model.setLink_upload_img(this.getConfig().getResolveUrl("igrp","file","save-image-txt&p_page_name="+Core.getCurrentPage()));
 		WebReportView view = new WebReportView();
 		/*----#gen-example
 		  EXAMPLES COPY/PASTE:
@@ -91,9 +90,10 @@ public class WebReportController extends Controller {
 				t1.setLink("igrp_studio", "web-report", "load-template&id=" + r.getId());
 				t1.setLink_desc(r.getCode());
 				t1.setId(r.getId());
-				t1.setTitle(r.getName() + "( " + r.getCode() + " )");
+				t1.setTitle(r.getName() + " (" + r.getCode() + ")");
 				data.add(t1);
 			}
+			data.sort((WebReport.Gen_table o1, WebReport.Gen_table o2)->o1.getTitle().compareTo(o2.getTitle()));
 			view.gen_table.addData(data);
 			model.setLink_add_source(this.getConfig().getResolveUrl("igrp", "data-source", "index&target=_blank&id_env=" + model.getEnv_fk()));
 			model.setLink_upload_img(this.getConfig().getResolveUrl("igrp_studio", "web-report", "save-image&id_env=" + model.getEnv_fk()));
@@ -218,7 +218,7 @@ public class WebReportController extends Controller {
 				xml.endElement();
 				return this.renderView(xml.toString());
 			}
-		}catch(ServletException e){
+		}catch(ServletException ignored){
 			
         }
 
@@ -308,7 +308,7 @@ public class WebReportController extends Controller {
 		StringBuilder xml = new StringBuilder();
 
 		List<RepTemplateSource> allRepTemplateSource = new RepTemplateSource().getAllDataSources(rt.getId()); 
-		List<RepTemplateSource> allRepTemplateSourceTask  = allRepTemplateSource.stream().filter(p -> p.getRepSource().getType().equalsIgnoreCase("task")).collect(Collectors.toList()); 
+		List<RepTemplateSource> allRepTemplateSourceTask  = allRepTemplateSource.stream().filter(p -> p.getRepSource().getType().equalsIgnoreCase("task")).toList();
 		allRepTemplateSource.removeIf(p -> p.getRepSource().getType().equalsIgnoreCase("task")); 
 		
 		//Iterate data source per template
@@ -400,8 +400,7 @@ public class WebReportController extends Controller {
 	private String getData(RepTemplateSource rep,String[] nameArray,String []valueArray) {
 		String type = rep.getRepSource().getType().toLowerCase();
 		switch (type) {
-			case "object":
-			case "query":
+			case "object","query":
 				return this.getDataForQueryOrObject(rep,nameArray,valueArray);
 			case "page":
 				return this.getDataForPage(rep);
@@ -493,7 +492,7 @@ public class WebReportController extends Controller {
 			for (RepTemplateSource r : new RepTemplateSource().getAllDataSources(rt.getId())) {
 				dataSources.append(r.getRepSource().getId()).append(",");
 			}
-			dataSources = new StringBuilder((dataSources.length() > 0) ? dataSources.substring(0, dataSources.length() - 1) : "");
+			dataSources = new StringBuilder((!dataSources.isEmpty()) ? dataSources.substring(0, dataSources.length() - 1) : "");
 			json = "{\"textreport\":" + new String(clob.getC_lob_content()) + ",\"datasorce_app\":\"" + dataSources + "\"}";
 		}
 		this.format = Response.FORMAT_JSON;
